--- a/front/reservation.html
+++ b/front/reservation.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="public/style.css" />
 </head>
 <body>
+<div id="top-progress-bar"></div>
 <div class="app-shell">
 
 <header class="app-header">
