--- a/front/reservation.html
+++ b/front/reservation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="hotel-app">
+<html lang="fr" class="hotel-app">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,17 +14,17 @@
   <div class="brand">
     <p class="eyebrow">Kotan Voyages · RateHawk sandbox</p>
     <h1>
-      B2B hotel console
-      <span class="badge">internal</span>
+      Console hôtelière B2B
+      <span class="badge">interne</span>
     </h1>
-    <p class="sub">Search, review details, and debug bookings in one workspace.</p>
+    <p class="sub">Recherchez, consultez les détails et gérez les réservations dans un seul espace.</p>
   </div>
   <div class="header-actions">
     <label class="language-switch" for="language">
-      <span>Language</span>
+      <span>Langue</span>
       <select id="language">
-        <option value="en" selected>English</option>
-        <option value="fr">Français</option>
+        <option value="fr" selected>Français</option>
+        <option value="en">English</option>
       </select>
     </label>
   </div>
@@ -39,32 +39,32 @@
             <input
               id="region_id"
               type="text"
-              placeholder="Try Paris, Rome, Dubai..."
+              placeholder="Essayez Paris, Rome, Dubaï..."
               autocomplete="off"
               aria-describedby="destinationHelp regionStatus"
               aria-haspopup="listbox"
               aria-expanded="false"
             />
-            <small id="destinationHelp" class="muted" style="font-size:.7rem;">Type a city or ETG region; we’ll autocomplete it.</small>
+            <small id="destinationHelp" class="muted" style="font-size:.7rem;">Saisissez une ville ou une région ETG&nbsp;; l’autocomplétion vous aidera.</small>
             <small id="regionStatus" class="muted" style="font-size:.7rem;"></small>
             <div id="suggestionsDropdown" class="suggestions-dropdown hidden" role="listbox" aria-label="Destination suggestions"></div>
           </div>
           <div class="field">
-            <label for="checkin">Check-in</label>
+            <label for="checkin">Arrivée</label>
             <input id="checkin" type="date" />
           </div>
           <div class="field">
-            <label for="checkout">Check-out</label>
+            <label for="checkout">Départ</label>
             <input id="checkout" type="date" />
           </div>
           <div class="field compact" style="position:relative;">
-            <label for="guestsSummary">Guests</label>
+            <label for="guestsSummary">Voyageurs</label>
             <button id="btnGuests" class="secondary" style="text-align:left;">
-              <span id="guestsSummary">2 adults · 0 children</span>
+              <span id="guestsSummary">2 adultes · 0 enfant</span>
             </button>
           </div>
           <div class="field compact">
-            <label for="currency">Currency</label>
+            <label for="currency">Devise</label>
             <select id="currency">
               <option value="EUR" selected>EUR</option>
               <option value="USD">USD</option>
@@ -72,22 +72,22 @@
           </div>
           <div class="field action">
             <label>&nbsp;</label>
-            <button id="btnSearch" class="primary">Search</button>
+            <button id="btnSearch" class="primary">Rechercher</button>
           </div>
         </div>
 
         <details class="extras">
-          <summary>Advanced search</summary>
+          <summary>Recherche avancée</summary>
           <div class="extras-grid">
             <div class="field">
-              <label>Search mode</label>
+              <label>Mode de recherche</label>
               <div class="radio-row">
-                <label><input type="radio" name="mode" value="region" checked /> Region</label>
-                <label><input type="radio" name="mode" value="geo" /> Geo (lat/lon)</label>
+                <label><input type="radio" name="mode" value="region" checked /> Région</label>
+                <label><input type="radio" name="mode" value="geo" /> Géo (lat/lon)</label>
               </div>
             </div>
             <div class="field" id="regionBlock">
-              <small style="color:#94a3b8;font-size:.7rem;">Uses region_id field above</small>
+              <small style="color:#94a3b8;font-size:.7rem;">Utilise le champ region_id ci‑dessus</small>
             </div>
             <div class="field" id="geoBlock" style="display:none;">
               <div class="geo-grid">
@@ -100,7 +100,7 @@
                   <input id="longitude" type="number" step="0.000001" placeholder="2.3522" />
                 </div>
                 <div>
-                  <label for="radius">Radius (m)</label>
+                  <label for="radius">Rayon (m)</label>
                   <input id="radius" type="number" min="100" max="5000" value="1500" />
                 </div>
               </div>
@@ -111,7 +111,7 @@
         <!-- FILTERS UI -->
         <div class="filters">
           <div class="filter-group">
-            <p class="filter-title">Star rating</p>
+            <p class="filter-title">Catégorie</p>
             <div class="filter-options">
               <label><input type="checkbox" class="flt-stars" value="2"> 2★</label>
               <label><input type="checkbox" class="flt-stars" value="3"> 3★</label>
@@ -121,7 +121,7 @@
           </div>
 
           <div class="filter-group">
-            <p class="filter-title">Meal plan</p>
+            <p class="filter-title">Régime</p>
             <div class="filter-options">
               <label><input type="checkbox" class="flt-meal" value="nomeal"> RO</label>
               <label><input type="checkbox" class="flt-meal" value="breakfast"> BB</label>
@@ -132,9 +132,9 @@
           </div>
 
           <div class="filter-group">
-            <p class="filter-title">Policies</p>
+            <p class="filter-title">Politiques</p>
             <label class="checkbox-inline">
-              <input type="checkbox" id="flt_free_cancel"> Free cancellation only
+              <input type="checkbox" id="flt_free_cancel"> Uniquement annulation gratuite
             </label>
           </div>
         </div>
@@ -145,36 +145,36 @@
     <div class="results-grid">
       <div class="card results-card">
         <h3>
-          Search results
+          Résultats de recherche
           <span id="searchMeta" style="color:#64748b;font-size:.7rem;font-weight:400;"></span>
         </h3>
         <div id="hotelsContainer" class="hotel-list">
-          <div style="font-size:.7rem;color:#64748b;">No results yet. Do a search</div>
+          <div style="font-size:.7rem;color:#64748b;">Aucun résultat pour l’instant. Lancez une recherche.</div>
         </div>
         <div id="resultsPagination" class="pagination" style="display:none;">
-          <button id="btnResultsPrev" class="secondary mini" type="button">Previous</button>
+          <button id="btnResultsPrev" class="secondary mini" type="button">Précédent</button>
           <span id="resultsPaginationLabel">Page 1 / 1</span>
-          <button id="btnResultsNext" class="secondary mini" type="button">Next</button>
+          <button id="btnResultsNext" class="secondary mini" type="button">Suivant</button>
         </div>
       </div>
 
       <div class="card details-card">
         <h3>
-          <span id="hotelDetailHeaderTitle">Hotel details & rates</span>
-          <span id="hotelDetailHeaderHint" style="color:#64748b;font-size:.7rem;font-weight:400;">select a hotel</span>
+          <span id="hotelDetailHeaderTitle">Détails de l’hôtel & tarifs</span>
+          <span id="hotelDetailHeaderHint" style="color:#64748b;font-size:.7rem;font-weight:400;">sélectionnez un hôtel</span>
         </h3>
         <div id="hotelDetails">
-          <div id="hotelDetailsPlaceholder" style="font-size:.7rem;color:#64748b;">No hotel selected.</div>
+          <div id="hotelDetailsPlaceholder" style="font-size:.7rem;color:#64748b;">Aucun hôtel sélectionné.</div>
         </div>
       </div>
     </div>
 
     <div class="card log-card">
       <h3>
-        Debug / Log output
-        <span style="color:#64748b;font-size:.7rem;font-weight:400;">for dev only</span>
+        Journal / Debug
+        <span style="color:#64748b;font-size:.7rem;font-weight:400;">réservé aux développeurs</span>
       </h3>
-      <pre id="logOutput">// logs will show here</pre>
+      <pre id="logOutput">// les journaux apparaîtront ici</pre>
     </div>
   </section>
 </main>
@@ -186,12 +186,12 @@
   <div class="modal__backdrop"></div>
   <div class="modal__dialog" style="width:min(360px,92vw)">
     <div class="modal__header">
-      <div class="modal__title">Guests</div>
-      <button id="guestClose" class="secondary mini" aria-label="Close">✕</button>
+      <div class="modal__title">Voyageurs</div>
+      <button id="guestClose" class="secondary mini" aria-label="Fermer">✕</button>
     </div>
     <div class="modal__body" style="gap:1rem;">
       <div>
-        <label style="font-size:.75rem;color:#cbd5e1;">Adults</label>
+        <label style="font-size:.75rem;color:#cbd5e1;">Adultes</label>
         <div class="counter">
           <button type="button" id="adultDec">−</button>
           <div class="value" id="adultValue">2</div>
@@ -199,14 +199,14 @@
         </div>
       </div>
       <div>
-        <label style="font-size:.75rem;color:#cbd5e1;">Children</label>
+        <label style="font-size:.75rem;color:#cbd5e1;">Enfants</label>
         <input id="childrenCount" type="number" min="0" max="8" value="0" />
         <div id="childAges" class="ages-grid" style="margin-top:.5rem;"></div>
-        <small class="muted">Ages 0–17 when children present.</small>
+        <small class="muted">Âges de 0 à 17 ans lorsque des enfants sont présents.</small>
       </div>
     </div>
     <div class="modal__footer">
-      <button id="guestsDoneModal" class="primary">Done</button>
+      <button id="guestsDoneModal" class="primary">Valider</button>
     </div>
   </div>
 </div>
