--- a/front/booking.html
+++ b/front/booking.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" class="hotel-app">
+<html lang="fr" class="hotel-app">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Booking Form · Kotan Voyages</title>
+  <title>Formulaire de réservation · Kotan Voyages</title>
   <link rel="stylesheet" href="public/style.css" />
 </head>
 <body>
@@ -11,8 +11,8 @@
     <header class="app-header">
       <div class="brand">
         <p class="eyebrow">Kotan Voyages · RateHawk sandbox</p>
-        <h1>Booking form</h1>
-        <p class="sub">Review the ETG booking requirements and submit traveller details.</p>
+        <h1>Formulaire de réservation</h1>
+        <p class="sub">Vérifiez les informations ETG et renseignez les détails du voyageur.</p>
       </div>
     </header>
 
@@ -20,20 +20,20 @@
       <section class="card booking-panel">
         <div class="booking-intro">
           <div>
-            <p class="muted" style="margin:0">Prebook token</p>
+            <p class="muted" style="margin:0">Jeton de pré‑réservation</p>
             <code id="prebookToken" class="booking-token">-</code>
           </div>
-          <button id="refreshForm" class="secondary mini">Refresh form</button>
+          <button id="refreshForm" class="secondary mini">Rafraîchir le formulaire</button>
         </div>
         <div id="bookingStatus" class="booking-status muted"></div>
 
         <div id="bookingFormSummary" class="booking-summary hidden">
           <div class="summary-row">
             <div>
-              <p class="muted" style="margin:0">Partner order ID</p>
+              <p class="muted" style="margin:0">ID de commande partenaire</p>
               <code id="partnerOrderId" class="booking-token">-</code>
             </div>
-            <button id="copyPartnerId" class="secondary mini">Copy</button>
+            <button id="copyPartnerId" class="secondary mini">Copier</button>
           </div>
           <div class="summary-row">
             <div>
@@ -46,20 +46,20 @@
         </div>
 
         <section class="card booking-form" id="travellerForm" aria-live="polite">
-          <h3>Traveller details</h3>
+          <h3>Détails du voyageur</h3>
           <form id="bookingDetailsForm">
             <div class="row">
               <label>
-                Civility
+                Civilité
                 <select id="customerCivility" required>
-                  <option value="">Select…</option>
+                  <option value="">Sélectionner…</option>
                   <option value="Mr">Mr</option>
                   <option value="Mrs">Mrs</option>
                   <option value="Ms">Ms</option>
                 </select>
               </label>
               <label>
-                Full name
+                Nom complet
                 <input type="text" id="customerName" placeholder="John Doe" required />
               </label>
               <label>
@@ -69,48 +69,67 @@
             </div>
             <div class="row">
               <label>
-                Phone number
+                Numéro de téléphone
                 <input type="tel" id="customerPhone" placeholder="+33 6 00 00 00 00" required />
               </label>
               <label>
-                Notes (optional)
-                <input type="text" id="bookingNotes" placeholder="Late arrival, VIP, …" />
+                Notes (optionnel)
+                <input type="text" id="bookingNotes" placeholder="Arrivée tardive, VIP, …" />
               </label>
             </div>
             <div class="row">
               <label>
-                Address
+                Adresse
                 <input type="text" id="customerAddressLine1" placeholder="1 Rue de la Paix" />
               </label>
               <label>
-                ZIP / City
+                Code postal / Ville
                 <input type="text" id="customerAddressZipCity" placeholder="33000 Bordeaux" />
               </label>
               <label>
-                Country code
+                Code pays
                 <input type="text" id="customerCountryCode" placeholder="FR" maxlength="2" />
               </label>
             </div>
             <div class="row">
               <label>
-                Floa product
+                Moyen de paiement
+                <div style="display:flex;flex-direction:column;gap:.25rem;margin-top:.25rem;">
+                  <label style="font-size:.85rem;">
+                    <input type="radio" name="paymentMethod" id="paymentMethodFloa" value="floa" checked />
+                    Payer en plusieurs fois avec Floa
+                  </label>
+                  <label style="font-size:.85rem;">
+                    <input type="radio" name="paymentMethod" id="paymentMethodSystempay" value="systempay" />
+                    Payer par carte avec Systempay
+                  </label>
+                </div>
+              </label>
+            </div>
+
+            <div class="row" id="floaOptionsRow">
+              <label>
+                Produit Floa
                 <select id="floaProduct">
-                  <option value="">Choose a product…</option>
+                  <option value="">Choisir un produit…</option>
                   <option value="BC1XF">Paiement comptant (BC1XF)</option>
                   <option value="BC3XF">Paiement en 3x (BC3XF)</option>
                   <option value="BC4XF">Paiement en 4x (BC4XF)</option>
                 </select>
               </label>
+            </div>
+
+            <div class="row">
               <div style="display:flex;align-items:flex-end;gap:.5rem;">
-                <button type="button" id="btnFloaPay" class="primary">Pay with Floa</button>
+                <button type="button" id="btnPay" class="primary">Payer maintenant</button>
               </div>
             </div>
           </form>
         </section>
 
         <section class="card booking-raw">
-          <h3>Raw ETG form</h3>
-          <pre id="rawForm">// waiting for booking form…</pre>
+          <h3>Formulaire ETG brut</h3>
+          <pre id="rawForm">// en attente du formulaire de réservation…</pre>
         </section>
       </section>
     </main>
