--- a/BedTrip_ui/index.html
+++ b/BedTrip_ui/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="icon" href="/bedtrip-icon.svg" type="image/svg+xml">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bedtrip</title>
+    <title>Bedtrip Console hôtelière</title>
   </head>
   <body>
     <div id="app"></div>
